# aaew-linggloss

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
aaew_linggloss/: __init__.py  bts.py  mapping.py
aaew_linggloss/data/: flexcodes.json
aaew_linggloss/tests/: test_gloss.py
