[tool.poetry]
name = "aaew-linggloss"
version = "0.0.1"
description = "Library for applying Leipzig Glossing Rules to Thesaurus Linguae Aegyptiae (TLA) lemma occurrences"
authors = ["Dr. Daniel Werning <daniel.werning@bbaw.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.9.0"
pytest = "^5.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

