[tool.poetry]
name = "aaew-linggloss"
version = "0.0.1"
description = "Library for applying Leipzig Glossing Rules to Thesaurus Linguae Aegyptiae (TLA) lemma occurrences"
authors = ["Dr. Daniel Werning <daniel.werning@bbaw.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.9.0"
pytest = "^5.2.2"
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
